API added search button added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <h1 class="header">Weather Dashboard</h1>
+    </div>
+
+    <div class="card-content citySearch">
+        <div class="content">
+         <label>Search for a City</label>
+         <input type="text" placeholder="Enter City" id="userInput"> 
+         <button id="btn">Find!</button>
+         <hr>
+          <div id="city-div">
+          </div>
+          <br>
+        </div>
+      </div>
+
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript">
+</script>
+<script src="script.js"></script>
 </html>
