--- a/index.html
+++ b/index.html
@@ -3,29 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <title>My Weather Dashboard</title>
+    
 </head>
 <body>
     <div class="container-fluid">
         <h1 class="header">Weather Dashboard</h1>
     </div>
-
-    <div class="card-content citySearch">
-        <div class="content">
-         <label>Search for a City</label>
-         <input type="text" placeholder="Enter City" id="userInput"> 
-         <button id="btn">Find!</button>
-         <hr>
-          <div id="city-div">
-          </div>
-          <br>
+    <div class="container">
+        <div class="columns">
+            <div class="row">
+                <div class="column is-two-fifths"" id="box">
+                    <label for="city-input" id="search">Search for a City:</label></br>
+                    <input type="text" id="city-input" placeholder="Search.." name="search">
+                    <button class="btn btn-primary" role="button" id="select-city" type="submit"><i class="fa fa-search"></i></button>
+                </div>
+            </div>
+                <div class="column is-three-fifths"" id="main-section">
+                    <div id="main-weather"> 
+                        <div class="results-boxes">
+                            <div id="city-name"></div>
+                            <div id="temp"></div>
+                            <div id="humidity"></div>
+                            <div id="wind-speed"></div>
+                            <div id="uv-index"></div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row" id="5day">
+                    </div>
+                </div>
         </div>
-      </div>
+    </div>
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript">
-</script>
-<script src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment.min.js" integrity="sha512-Izh34nqeeR7/nwthfeE0SI3c8uhFSnqxV0sI9TvTcXiFJkMd6fB644O64BRq2P/LA/+7eRvCw4GmLsXksyTHBg==" crossorigin="anonymous"></script>
+<script src="./script.js"></script>   
+
 </html>
