--- a/index.html
+++ b/index.html
@@ -35,8 +35,43 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="row" id="5day">
-                    </div>
+                    <row id="5-day-forecast">
+                        <div id="forecast-area">
+                            <h2>5 Day Forecast</h2>
+                            <row class="row">
+                                <div id="forecast-day-1" class="col-2 forecast">
+                                    <div class="forecast-date" id="forecast1"></div>
+                                    <div class="forecast-icon" id="forecasticon1"></div>
+                                    <div class="forecast-temp" id="forecasttemp1"></div>
+                                    <div class="forecast-hum" id="forecasthum1"></div> 
+                                </div>
+                                <div id="forecast-day-2" class="col-2 forecast">
+                                    <div class="forecast-date" id="forecast2"></div>
+                                    <div class="forecast-icon" id="forecasticon2"></div>
+                                    <div class="forecast-temp" id="forecasttemp2"></div>
+                                    <div class="forecast-hum" id="forecasthum2"></div>
+                                </div>
+                                <div id="forecast-day-3" class="col-2 forecast">
+                                    <div class="forecast-date" id="forecast3"></div>
+                                    <div class="forecast-icon" id="forecasticon3"></div>
+                                    <div class="forecast-temp" id="forecasttemp3"></div>
+                                    <div class="forecast-hum" id="forecasthum3"></div>
+                                </div>
+                                <div id="forecast-day-4" class="col-2 forecast">
+                                    <div class="forecast-date" id="forecast4"></div>
+                                    <div class="forecast-icon" id="forecasticon4"></div>
+                                    <div class="forecast-temp" id="forecasttemp4"></div>
+                                    <div class="forecast-hum" id="forecasthum4"></div>
+                                </div>
+                                <div id="forecast-day-5" class="col-2 forecast">
+                                    <div class="forecast-date" id="forecast5"></div>
+                                    <div class="forecast-icon" id="forecasticon5"></div>
+                                    <div class="forecast-temp" id="forecasttemp5"></div>
+                                    <div class="forecast-hum" id="forecasthum5"></div>
+                                </div>
+                            </row>
+                        </div>
+                    </row>
                 </div>
         </div>
     </div>
