fixed local storage

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <label for="city-input" id="search">Search for a City:</label></br>
                     <input type="text" id="city-input" placeholder="Search.." name="search">
                     <button class="btn btn-primary" role="button" id="select-city" type="submit"><i class="fa fa-search"></i></button>
+                    <div>
+                        <ul id="history"></ul>
+                    </div>
                 </div>
             </div>
                 <div class="column is-three-fifths"" id="main-section">
